turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:11: error: type mismatch;
 found   : Int
 required: java.awt.Color
setCouleurBrosse(i+1);
                  ^