turmites.lessons.turmites.helloturmite.HelloTurmite.scala.code
    var state = 0;
    var i = 0;

    def step(colors:Array[Color], rule:Array[Array[Array[Int]]] ) {
var C=true;
while(C==true){
 while(getCouleurSol()!=colors(i)){
							i+=1
}
setCouleurBrosse(i+1);
for(i<-0 to rule.length-1){
	for(j<-0 to rule.length-1){
		for(k<-0 to rule.length-1){
rule(i)(j)(k)	match{
	case 2 => gauche(); baisseBrosse(); leveBrosse();
	case 4 => droite();droite(); baisseBrosse(); leveBrosse();
	case 8 => droite(); baisseBrosse(); leveBrosse();
	case 1 => baisseBrosse(); leveBrosse();
	case 0 => C=false;
	}
}
}
}
}
	
    }
